--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,14 @@
       "env": {
         "NODE_OPTIONS": "--max_old_space_size=4096"
       }
+    },
+    "apk": {
+      "android": {
+        "buildType": "apk"
+      },
+      "env": {
+        "NODE_OPTIONS": "--max_old_space_size=4096"
+      }
     }
   }
 }
